develop: small imrpovements

--- a/6 -  Enemy variety in JavaScript games/index.html
+++ b/6 -  Enemy variety in JavaScript games/index.html
@@ -9,9 +9,9 @@
   </head>
   <body>
     <canvas id="canvas1"></canvas>
-    <img id="worm" src="./assets/enemy_worm.png" alt="worm" />
-    <img id="ghost" src="./assets/enemy_ghost.png" alt="ghost" />
-    <img id="spider" src="./assets/enemy_spider.png" alt="spider" />
+    <img id="worm" src="./assets/enemy_worm.png" />
+    <img id="ghost" src="./assets/enemy_ghost.png" />
+    <img id="spider" src="./assets/enemy_spider.png" />
     <script src="script.js"></script>
   </body>
 </html>
